scripts/nullness/nullgtn/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8.txt
../nullgtn/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:4: error: [initialization.static.field.uninitialized] static field instructionCache not initialized
    private static int[] instructionCache;
                         ^
../nullgtn/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:7: error: [initialization.static.field.uninitialized] static field mainMemory not initialized
    private static int[] mainMemory;
                         ^
../nullgtn/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:10: error: [initialization.static.field.uninitialized] static field regs not initialized
    private static int[] regs;
                         ^
3 errors
